ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: refac
  annotations:  
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: refac.com
      http:
        paths:
          - path: /
            backend:
              serviceName: refac-service
              servicePort: 80
